# leic-schedules

./: .gitignore  CMakeLists.txt  Data.h  Functions.cpp  Functions.h  Makefile  README.md  ReadData.h  tests  tests.cpp
AED2324_PRJ1_G110/: Makefile
AED2324_PRJ1_G<110>/: Makefile
Code/: Change.cpp  Change.h  Consult  Consult.cpp  Consult.h  Data.cpp  Data.h  Doxyfile  Functions.cpp  Functions.h  Functions_Bruno.cpp  Functions_Bruno.h  Functions_Gabriel.cpp  Functions_Gabriel.h  Functions_Ricardo.cpp  Functions_Ricardo.h  Makefile  ReadData.cpp  ReadData.h  Script  Script.cpp  Script.h  UtilityFunctions.cpp  UtilityFunctions.h  consult  run  runscript.cpp  schedules.txt  students.txt  students_classes.csv  students_updated.csv  tests.cpp  testsBruno  testsGabriel  testsRicardo  tests_Ricardo  tests_Ricardo.cpp
Code2/: Data.cpp  Data.h  Doxyfile  L.EIC001_1LEIC01.txt  L.EIC001_1LEIC02.txt  L.EIC001_1LEIC03.txt  L.EIC001_1LEIC04.txt  L.EIC001_1LEIC05.txt  L.EIC001_1LEIC06.txt  L.EIC001_1LEIC07.txt  L.EIC001_1LEIC09.txt  L.EIC001_1LEIC10.txt  L.EIC001_1LEIC11.txt  L.EIC001_1LEIC12.txt  L.EIC001_1LEIC13.txt  L.EIC001_1LEIC15.txt  L.EIC002_1LEIC01.txt  L.EIC002_1LEIC02.txt  L.EIC002_1LEIC03.txt  L.EIC002_1LEIC04.txt  L.EIC002_1LEIC05.txt  L.EIC002_1LEIC06.txt  L.EIC002_1LEIC07.txt  L.EIC002_1LEIC08.txt  L.EIC002_1LEIC09.txt  L.EIC002_1LEIC10.txt  L.EIC002_1LEIC11.txt  L.EIC002_1LEIC12.txt  L.EIC002_1LEIC13.txt  L.EIC002_1LEIC14.txt  L.EIC002_1LEIC15.txt  L.EIC003_1LEIC01.txt  L.EIC003_1LEIC02.txt  L.EIC003_1LEIC03.txt  L.EIC003_1LEIC04.txt  L.EIC003_1LEIC05.txt  (+202 more)
(+1027 files in other folders)
